--- a/src/forms/FormText/FormText.pcss
+++ b/src/forms/FormText/FormText.pcss
@@ -9,4 +9,9 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  &_wrap {
+    overflow: auto;
+    white-space: normal;
+    // text-overflow: initial;
+  }
 }
